force-app/main/default/objects/Rule__mdt/fields/Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Field__c</fullName>
    <label>Criteria Field</label>
    <metadataRelationshipControllingField>Rule__mdt.Criteria_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>