force-app/main/default/objects/Rule__mdt/fields/Criteria_Object__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Object__c</fullName>
    <label>Criteria Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>