force-app/main/default/objects/Rule__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greater Than</fullName>
                <default>true</default>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Greater than and Less than</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>