force-app/main/default/objects/Rule__mdt/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <label>Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>