force-app/main/default/objects/Rule__mdt/fields/Rule_Set__c.field-meta.xml
<CustomField>
    <fullName>Rule_Set__c</fullName>
    <label>Rule Set</label>
    <referenceTo>Rule_Set__mdt</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>