force-app/main/default/objects/Rule__mdt/fields/Secondary_value__c.field-meta.xml
<CustomField>
    <fullName>Secondary_value__c</fullName>
    <label>Secondary value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>